[tool.poetry]
name = "vabusdatahandler"
version = "0.1.0"
description = "A service for aggregating events and sending them to external storage"
authors = ["LastTherapy <random1250@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
aiokafka = "^0.7"
asyncpg = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
